third_party/move/move-compiler-v2/tests/verification/noverify/cross_module_invalid2.exp

Diagnostics:
error: undeclared `0x1::B::Foo`
   ┌─ tests/verification/noverify/cross_module_invalid2.move:24:23
   │
24 │     public fun bad(): Foo {
   │                       ^^^
